--- a/AppBolivar/Src/scHistoriaMedica.fx.yaml
+++ b/AppBolivar/Src/scHistoriaMedica.fx.yaml
@@ -462,37 +462,37 @@ scHistoriaMedica As screen:
                                     id_especialidad:varEspecialidadSelected.id,
                                     id_doctor:getUser.id,
                                     fecha_registro: Now(),
-                                    motivo_consulta: LookUp(formularioCamposLineales,num=1).respuestaTexto,
-                                    enfermedad_actual: LookUp(formularioCamposLineales,num=2).respuestaTexto,
-                                    síntomas_signos: LookUp(formularioCamposLineales,num=3).respuestaTexto,
-                                    tratamiento_farmacológico: LookUp(formularioCamposLineales,num=4).respuestaTexto,
-                                    tratamiento_nutricional: LookUp(formularioCamposLineales,num=5).respuestaTexto,
-                                    antecedentes_personales:  LookUp(formularioCamposLineales,num=6).respuestaTexto,
-                                    antecedentes_familiares:  LookUp(formularioCamposLineales,num=7).respuestaTexto,
-                                    apetito:  LookUp(formularioCamposLineales,num=8).respuestaTexto,
-                                    cigarrillo: LookUp(formularioCamposLineales,num=9).respuestaTexto,
-                                    alcohol: LookUp(formularioCamposLineales,num=10).respuestaTexto,
-                                    actividad_física: LookUp(formularioCamposLineales,num=11).respuestaTexto,
-                                    sueño: LookUp(formularioCamposLineales,num=12).respuestaTexto,
-                                    menstruación: LookUp(formularioCamposLineales,num=13).respuestaTexto,
-                                    síntomas_gastrointestinales: LookUp(formularioCamposLineales,num=14).respuestaTexto,
-                                    nauseas:LookUp(formularioCamposLineales,num=15).respuestaTexto,
-                                    vómitos: LookUp(formularioCamposLineales,num=16).respuestaTexto,
+                                    motivo_consulta: tiScHistoria1_7.Text,
+                                    enfermedad_actual: RichTextEditor1_21.HtmlText,
+                                    síntomas_signos: RichTextEditor1_22.HtmlText,
+                                    tratamiento_farmacológico: tiScHistoria1_8.Text,
+                                    tratamiento_nutricional: tiScHistoria1_9.Text,
+                                    antecedentes_personales:  RichTextEditor1_24.HtmlText,
+                                    antecedentes_familiares:  RichTextEditor1_23.HtmlText,
+                                    apetito:  tiScHistoria1_10.Text,
+                                    cigarrillo:  tiScHistoria1_11.Text,
+                                    alcohol: tiScHistoria1_12.Text,
+                                    actividad_física: tiScHistoria1_13.Text,
+                                    sueño: tiScHistoria1_14.Text,
+                                    menstruación: tiScHistoria1_15.Text,
+                                    síntomas_gastrointestinales: tiScHistoria1_16.Text,
+                                    nauseas:tiScHistoria1_17.Text,
+                                    vómitos: tiScHistoria1_18.Text,
                                     acidez: LookUp(formularioCamposLineales,num=17).respuestaTexto,
-                                    flatulencia: LookUp(formularioCamposLineales,num=18).respuestaTexto,
-                                    diarrea: LookUp(formularioCamposLineales,num=19).respuestaTexto,
-                                    estreñimiento: LookUp(formularioCamposLineales,num=20).respuestaTexto,
-                                    micción: LookUp(formularioCamposLineales,num=21).respuestaTexto,
-                                    masticación: LookUp(formularioCamposLineales,num=22).respuestaTexto,
-                                    alergias_intolerancias_alimentarias: LookUp(formularioCamposLineales,num=23).respuestaTexto,
-                                    número_comidas_dia: LookUp(formularioCamposLineales,num=24).respuestaTexto,
-                                    vasos_dia: LookUp(formularioCamposLineales,num=25).respuestaTexto,
-                                    prepara_alimento: LookUp(formularioCamposLineales,num=26).respuestaTexto,
-                                    come_rápido: LookUp(formularioCamposLineales,num=27).respuestaTexto,
-                                    alimentos_gustan: LookUp(formularioCamposLineales,num=28).respuestaTexto,
-                                    alimentos_desagrado: LookUp(formularioCamposLineales,num=29).respuestaTexto,
-                                    lácteos: LookUp(formularioCamposLineales,num=30).respuestaTexto,
-                                    vegetales: LookUp(formularioCamposLineales,num=31).respuestaTexto,
+                                    flatulencia: tiScHistoria1_19.Text,
+                                    diarrea: tiScHistoria1_20.Text,
+                                    estreñimiento: tiScHistoria1_21.Text,
+                                    micción:tiScHistoria1_22.Text,
+                                    masticación: tiScHistoria1_23.Text,
+                                    alergias_intolerancias_alimentarias: tiScHistoria1_24.Text,
+                                    número_comidas_dia: tiScHistoria1_25.Text,
+                                    vasos_dia: tiScHistoria1_26.Text,
+                                    prepara_alimento: tiScHistoria1_27.Text,
+                                    come_rápido: tiScHistoria1_28.Text,
+                                    alimentos_gustan: tiScHistoria1_29.Text,
+                                    alimentos_desagrado: tiScHistoria1_30.Text,
+                                    lácteos: tiScHistoria1_31.Text,
+                                    vegetales: tiScHistoria1_32.Text,
                                     frutas: LookUp(formularioCamposLineales,num=32).respuestaTexto,
                                     cereales: LookUp(formularioCamposLineales,num=33).respuestaTexto,
                                     carnes: LookUp(formularioCamposLineales,num=34).respuestaTexto,
